--- a/templates/login.html
+++ b/templates/login.html
@@ -152,7 +152,7 @@
     <h2>Login</h2>
    
     <form method="post">
-      <input type="email" name="email" placeholder="Email" autocomplete="username" required>
+      <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required autocomplete="current-password">
 
       <button type="submit">Login</button>
